# src/routes/users.routes.ts
@@ -3,6 +3,7 @@ import { CreateUserController } from '../modules/Users/useCases/createUser/creat
 import { GetAllUsersController } from '../modules/Users/useCases/getAllUsers/getAllUsers.controller';
 import { isAuthenticated } from '../middleware/isAuthenticated';
 import { DeleteUserController } from '../modules/Users/useCases/deleteUser/deleteUser.controller';
+import { UpdateUserController } from '../modules/Users/useCases/updateUser/updateUser.controller';
 
 
 
@@ -10,8 +11,11 @@ const usersRouter = Router();
 const createUserController = new CreateUserController()
 const getAllUserController = new GetAllUsersController()
 const deleteUserController = new DeleteUserController()
+const updateUserController = new UpdateUserController()
+
 usersRouter.get('/', isAuthenticated, getAllUserController.handle);
 usersRouter.post('/', createUserController.handle);
+usersRouter.put('/:id', isAuthenticated, updateUserController.handle)
 usersRouter.delete('/:id', isAuthenticated, deleteUserController.handle);
 
 export default usersRouter;
